--- a/src/MVC5SampleApp/Web.config
+++ b/src/MVC5SampleApp/Web.config
@@ -13,5 +13,6 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <customErrors mode="Off"></customErrors>
   </system.web>
 </configuration>
