--- a/src/MVC5SampleApp/MVC5SampleApp.csproj
+++ b/src/MVC5SampleApp/MVC5SampleApp.csproj
@@ -177,6 +177,7 @@
     <Content Include="Scripts\respond.matchmedia.addListener.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\custom.role.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
