--- a/src/MVC5SampleApp/MVC5SampleApp.csproj
+++ b/src/MVC5SampleApp/MVC5SampleApp.csproj
@@ -205,6 +205,10 @@
     <Compile Include="Migrations\201505062000094_InitCreate.Designer.cs">
       <DependentUpon>201505062000094_InitCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201505261634092_AddForenameSurnameProperties.cs" />
+    <Compile Include="Migrations\201505261634092_AddForenameSurnameProperties.Designer.cs">
+      <DependentUpon>201505261634092_AddForenameSurnameProperties.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\FeedbackModel.cs" />
@@ -259,6 +263,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201505062000094_InitCreate.resx">
       <DependentUpon>201505062000094_InitCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505261634092_AddForenameSurnameProperties.resx">
+      <DependentUpon>201505261634092_AddForenameSurnameProperties.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
