Added a notice entity

--- a/src/MVC5SampleApp.Domain/MVC5SampleApp.Domain.csproj
+++ b/src/MVC5SampleApp.Domain/MVC5SampleApp.Domain.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="ApplicationDbContext.cs" />
     <Compile Include="ApplicationUser.cs" />
+    <Compile Include="Notice.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
