Added in a simple api call typeahead example

--- a/src/MVC5SampleApp/Web.config
+++ b/src/MVC5SampleApp/Web.config
@@ -13,6 +13,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="StatesApiUrl" value="http://localhost/MVC5SampleApp/Typeahead/states"/>
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Server=(local)\sql2008;Initial Catalog=MvcSampleDb;Integrated Security=True" providerName="System.Data.SqlClient" />
